--- a/ccatcracker/templates/base_4.html
+++ b/ccatcracker/templates/base_4.html
@@ -2,11 +2,7 @@
 {% load static %}
 
 <!DOCTYPE HTML>
-<!--
-	Broadcast by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
 		<title>Broadcast by TEMPLATED</title>
@@ -37,7 +33,7 @@
 				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 				formats to work correctly.
 			-->
-				<section id="banner" data-video="images/banner">
+				<section id="banner" >
 					<div class="inner">
 						<header>
 							<h1>This is Free Learning Platoform </h1>
