--- a/ccatcracker/templates/music/main.html
+++ b/ccatcracker/templates/music/main.html
@@ -1,7 +1,7 @@
 {% extends 'base_5.html' %}
         <!-- Main -->
 {% block content %}
-    
+
 <!-- Main -->
 	<!-- Main -->
     <div id="main">
@@ -12,18 +12,34 @@
                 <div class="inner">
                     <header class="align-center">
                         <h2>Search your Faviourite Songs</h2>
-                        <form method="post" action="#">
+                        <form method="post" action="{% url 'song_list' %}">
+                                {% csrf_token %}
                             <div class="row uniform">
                                 <div class="6u 12u$(small)">
-                                    <input type="text" name="query" id="query" value="" placeholder="Song Name  " />
+                                    <input type="text" name="query" id="search" value="" placeholder="Song Name" />
+                                    <p id="search-results">
+
+
+                                    </p>
                                 </div>
                                 <div class="3u$ 12u$(small)">
                                     <input type="submit" value="Search" class="fit" />
                                 </div>
                             </div>
                         </form>
+                        
 
                     </header>
+                    
+                    {% if songs %}
+                    <h3>Your search song</h3>
+                    {% for s in songs %}
+                        
+                            <ul>
+                                <li><a href= "{{s.link}}" class="link">{{s.song_name}} Super Hit Hindi Song {{s.year}} {{s.singer}}</a> </li>
+                            </ul>
+                            {% endfor %}
+                            {% endif %}
                     <h3>2019 Hit Bollywood Songs</h3>
 								<div class="row">
 									<div class="6u 12u$(small)">
@@ -31,17 +47,18 @@
 										<h4>Bollywood 2019</h4>
 										<ul>
 											<li><a href="{% url 'ccat_notify' %}" class="link">Lal Ishq Notation and Sargam</a> </li>
-											<li><a href="{% url 'ccat_notify' %}" class="link">Bekhayali Notation and Sargam</a></li>
+											<li><a href="{% url 'bekhayali-kabir-sing-2019-notation-sargam-tabs' %}" class="link">Bekhayali Notation and Sargam</a></li>
 											<li><a href="{% url 'ccat_notify' %}" class="link">Pachtaoge Notation and Sargam</a></li>
-										</ul>
-
+                                        </ul>
+                                    
                                     </div>
 
 								</div>
-                    
-                
-                </div>
-            </section>
+            </div>
+    
+
+        </div>
+        </section>
 
         <!-- Three -->
             <section class="wrapper ">
