--- a/ccatcracker/templates/pages/objective.html
+++ b/ccatcracker/templates/pages/objective.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 <style>
    div {
    background-color: lightgrey;
@@ -8,16 +9,25 @@
    margin: 20px;
    }
    pre{
-    background-color: #e0e0e0;
-    border-radius: 10px;
-    color: rgba(0,0,0,.9);
-    font-family: Consolas,monospace;
-    margin-bottom: 10px;
-    overflow: auto;
-    padding: 10px;
-    margin: 0px 0px 10px;
-    text-align: left;
-    }
+   background-color: #e0e0e0;
+   border-radius: 10px;
+   color: rgba(0,0,0,.9);
+   font-family: Consolas,monospace;
+   margin-bottom: 10px;
+   overflow: auto;
+   padding: 10px;
+   margin: 0px 0px 10px;
+   text-align: left;
+   }
+   ul {
+    margin: 0;
+    padding: 0 0 0 20px;
+    border: 0;
+    color: gray;
+    list-style-image: "{% static '/img/ccat9.png' %}";
+}
+
+   
 </style>
 {% block content %}
 <section id="bc" class="mt-3">
@@ -29,100 +39,122 @@
                <i class="fas fa-home"></i> Home</a>
             </li>
             <li class="breadcrumb-item active">Questions</li>
-            <h5>Here I have uploaded questions for all section B you will get question for 
-                C,CPP,DS,OS,Networking . Exam will ask same type of question so dont miss any single 
-                question solve all of them . 
-            </h5>
          </ol>
       </nav>
    </div>
 </section>
-
 <section id="about" class="py-4">
    <div class="container">
-   <div class="row">
+      <div class="row">
+         <div class="col-md-8">
+         <h4> Section B Question <br> <br> </h4>
+            {% if listings %}
      
-     
-      {% if listings %}
-     
-      <div style="background-color: lightgrey; width: 800px;
-         border: 2px solid gray;
-         padding: 50px;
-         margin: 20px; ">
-         {% for list in listings %}
-         <h4>Question {{list.qno}} : Aptitude Question <br> <br>
-            {{list.question|linebreaks}}
-         </h4>
-         <br>
-         <h4>Options  : </h4> <br>
-         <h5 style="color: darkcyan">
-            {{list.a}}  <br>
-            {{list.b}} <br>
-            {{list.c}} <br>
-            {{list.d}} <br>
-        </h5> <br>
-        <h4>Answer :   <br>
-         {{list.ans|linebreaks}}
-        </h4>
-        
-
-        -------------------------------------------------------------------------------------
       
-        
-         {% endfor %}
-         {% endif %}
-      </div>
-    </div>
-  
- </div>
-</div>
-</section>
+            {% for list in listings %}
 
-    <div class="row">
-    <div class="col-md-12">
+            <table class="bix-tbl-container" cellspacing="0" cellpadding="0" border="0" width="100%">
+            <tbody>
+               <tr>
+                  <td class="bix-td-qno" rowspan="2" valign="top" align="left" > {{list.qno}}.&nbsp;&nbsp;&nbsp;</td>
+                  <td class="bix-td-qtxt" valign="top">
+                  <span style="color:brown;">{{list.question|linebreaks}}</span>
+                  </td>
+               </tr>
+               <tr>
+                  <td class="bix-td-miscell" valign="top">
+                     <table class="bix-tbl-options" id="tblOption_434" border="0" cellpadding="0" cellspacing="0" width="100%">
+                        <tbody>
+                           <tr>
+                              <td  style="padding-top: .40em;" width="1%" ><a id="lnkOptionLink_A_434" href="javascript: void 0;">A.</a></td> 
+                              <td  style="padding-top: .40em;" width="99%" id="tdOptionDt_A_434">&nbsp;&nbsp;{{list.a}}</td>
+                           </tr>
+                           <tr>
+                              <td  style="padding-top: .2em;" width="1%" id="tdOptionNo_B_434"><a id="lnkOptionLink_B_434" href="javascript: void 0;">B.</a></td>
+                              <td  style=" padding-top: .5em;" width="99%" id="tdOptionDt_B_434">&nbsp;&nbsp;{{list.b}}</td>
+                           </tr>
+                           <tr>
+                              <td  style="padding-top: .40em;" width="1%" id="tdOptionNo_C_434"><a id="lnkOptionLink_C_434" href="javascript: void 0;">C.</a></td>
+                              <td  style=" padding-top: .5em;" width="99%" id="tdOptionDt_C_434">&nbsp;&nbsp;{{list.c}}</td>
+                           </tr>
+                           <tr>
+                              <td  style="padding-top: .40em;" width="1%" id="tdOptionNo_D_434"><a id="lnkOptionLink_D_434" href="javascript: void 0;">D.</a></td>
+                              <td  style=" padding-top: .5em;" width="99%" id="tdOptionDt_D_434">&nbsp;&nbsp;{{list.d}}</td>
+                           </tr> <br>
+                           <tr> 
+                             <td style=" padding-top: .40em;" width="1%"> <br> 
+                              
+      
+                          </tr>
+                       </tbody>
+                     </table>
+                    </td> <br> <br>
+                  </tr>
+                </tbody>
+              </table>
+              <pre style="margin-left: 50px;
+           
+              border: 1px dashed #93b7d5;
+              background-color: #f8f8f8;
+              padding: 10px;
+              width: auto;
+              margin-top: 10px;
+              margin-bottom: 10px;
+              ">
+                  {{list.ans|linebreaks}}</span>
+              </pre>
+           
+                  
+                  
+               {% endfor %}
+               {% endif %}
+
+              </div>
+      </div>
+      <br> <br>
       {% if listings.has_other_pages %}
-        <ul class="pagination">
-          {% if listings.has_previous %}
-            <li class="page-item">
-              <a href="?page={{listings.previous_page_number}}" class="page-link">&laquo;</a>
-            </li>
-          {% else %}
-            <li class="page-item disabled">
-              <a class="page-link">&laquo;</a>
-            </li>
-          {% endif %}
-          {% for i in listings.paginator.page_range %}
-            {% if listings.number == i %}
-              <li class="page-item active">
-                <a class="page-link">{{i}}</a>
-              </li>
-            {% else %}
-              <li class="page-item">
-                <a href="?page={{i}}" class="page-link">{{i}}</a>
-              </li>
-            {% endif %}
-          {% endfor %}
-          {% if listings.has_next %}
-            <li class="page-item">
-              <a href="?page={{listings.next_page_number}}" class="page-link">&raquo;</a>
-            </li>
-          {% else %}
-            <li class="page-item disabled">
-              <a class="page-link">&raquo;</a>
-            </li>
-          {% endif %}
-        </ul>
+      <ul class="pagination">
+      {% if listings.has_previous %}
+      <li class="page-item">
+      <a href="?aptitude={{listings.previous_page_number}}" class="page-link">&laquo;</a>
+      </li>
+      {% else %}
+      <li class="page-item disabled">
+      <a class="page-link">&laquo;</a>
+      </li>
       {% endif %}
-      </div>
+      {% for i in listings.paginator.page_range %}
+      {% if listings.number == i %}
+      <li class="page-item active">
+      <a class="page-link">{{i}}</a>
+      </li>
+      {% else %}
+      <li class="page-item">
+      <a href="?page={{i}}" class="page-link">{{i}}</a>
+      </li>
+      {% endif %}
+      {% endfor %}
+      {% if listings.has_next %}
+      <li class="page-item">
+      <a href="?page={{listings.next_page_number}}" class="page-link">&raquo;</a>
+      </li>
+      {% else %}
+      <li class="page-item disabled">
+      <a class="page-link">&raquo;</a>
+      </li>
+      {% endif %}
+      </ul>
+      {% endif %}
    </div>
-
+   </div>
+</section>
 <!-- Work -->
 <section id="work" class="bg-dark text-white text-center">
-   <h3>Enter Email If You are new here So You will get Daily Notification Dont Forget any single Question:</h3>
-   <form action="{% url 'notify' %}" method="POST">
-      {% csrf_token %}
-      E-mail: <input style="color: black" type="email" name="email">
-      <input style="color: green" type="submit">
-   </form>
+<h3>Enter Email If You are new here So You will get Daily Notification Dont Forget any single Question:</h3>
+<form action="{% url 'notify' %}" method="POST">
+{% csrf_token %}
+E-mail: <input style="color: black" type="email" name="email">
+<input style="color: green" type="submit">
+</form>
 </section>
 {% endblock %}
