--- a/ccatcracker/templates/OnlineTest/test2.html
+++ b/ccatcracker/templates/OnlineTest/test2.html
@@ -40,7 +40,7 @@
    {% if listings %}
    {% for list in listings %}
    
-   <form action="{% url 'result' %}" method="POST" name="q" >
+   <form action="{% url 'result2' %}" method="POST" name="q" >
       {% csrf_token %}
      
     
