--- a/ccatcracker/templates/partials/_navbar.html
+++ b/ccatcracker/templates/partials/_navbar.html
@@ -105,7 +105,7 @@
               class="nav-item mr-3"
               {% endif %}          
           >
-          <a class="nav-link" href="{% url 'test' %}">TEST SERIES CCAT</a>
+          <a class="nav-link" href="{% url 'onlinetest' %}">TEST SERIES CCAT</a>
           </li>
           <li 
           {% if 'interview' in request.path %}
