--- a/ccatcracker/templates/pages/interview.html
+++ b/ccatcracker/templates/pages/interview.html
@@ -1,49 +1,34 @@
 {% extends 'base.html' %}
-
 {% block content %}
-
 <section id="bc" class="mt-3">
-        <div class="container">
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item">
-                <a href="{% url 'index' %}">
-                  <i class="fas fa-home"></i> Home</a>
-              </li>
-              <li class="breadcrumb-item active">Questions</li>
-            </ol>
-          </nav>
-        </div>
-      </section>
-
-      <section id="about" class="py-4">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-8">
-                  <h4>How To Prepare For Interview ?</h4>
-                  <p >Most Important Questions Students always asks .</p>
-                  <br>
-                 
-                  <p>
-                    1. Here we are updating very Important FAQ in interview for DAC and Big Data Students . 
-                    <br>
-                    2. Dont miss any single question we will send daily reminder also . <br>
-                    
-                  </p>
-                  <h5 style="color: brown">Click below links for DAC and Big Data Interview Preparation : </h5>
-                  
-
-                </div>
-             
-                </div>
-              </div>
-              <br> <br>
-              <a  style="margin-left: 30%"  href="{% url 'dac_interview' %}" class="btn btn-secondary text-white btn-lg">DAC </a> <br> <br>
-   
-              <a  style="margin-left: 30%"  href="{% url 'big_data_interview' %}" class="btn btn-secondary text-white btn-lg">Big Data </a> 
-            
-            </div>
-          </section>
-
-
+   <div class="container">
+      <nav aria-label="breadcrumb">
+         <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+               <a href="{% url 'index' %}">
+               <i class="fas fa-home"></i> Home</a>
+            </li>
+            <li class="breadcrumb-item active">Questions</li>
+         </ol>
+      </nav>
+   </div>
+</section>
+<section id="about" class="py-4">
+   <div class="container">
+      <div class="row">
+         <div class="col-md-8">
+            <ul>
+                <li><a href="#"><strong>Python Interview Questions and Answers </strong></a></li> <br> 
+                <li><a href="#"><strong>Java Interview Questions and Answers </strong></a></li> <br>
+                <li><a href="#"><strong>Data Structure Interview Questions and Answers </strong></a></li> <br>
+                <li><a href="#"><strong>C++ Interview Questions and Answers </strong></a></li> <br>
+             </ul>
+           
+         </div>
+        
+      </div>
+   </div>
+   <br> <br>
+   </div>
+</section>
 {% endblock %}
