--- a/ccatcracker/templates/pages/questions.html
+++ b/ccatcracker/templates/pages/questions.html
@@ -25,118 +25,106 @@
 {% include 'partials/_alerts.html' %}
 <section id="about" class="py-4">
    <div class="container">
-  
-      
-         <h3>!!!  Questions Of The Day Program !!!</h3>
-         <p class="lead">What Exactly It means ? Whats the Benefit I will get from this ? .</p>
-         <p class="mt-4">
-         <h4>Please Read this very carefully all your doubts will get resolved .. :</h4>
-         <br>
-         <h5>1. Here We Will Update Daily only one question (Coding and Apti) .</h5>
-         <br>
-         <h5>2. Just think if you solve from day 1 to day last of cdac you will solve almost 300 Questions(Coding + Apti)</h5>
-         <br>
-         <h5>3. By doing this very small exercise you will be able to crack any technical round while interview .</h5>
-         <br>
-         <h5>4. I found hardly very few students will do that regularly but trust me guys all those student gets placed within 1 month who follow ccatctacker Instructions.</h5>
-         <br>
-         <h5>5. Remember One thing in cdac you dont have time for practise you will just finish subjects each 15 days ,
-            at the end You will not able to solve simple coding also . <br>
-         </h5>
-         <h5>6. Only Theory is not enough to crack interview so you need a lot coding practise .</h5>
-         <br>
-         <h5>7. That's why we have created this website so solve only one code daily basis and see what the great benefit you will get at the end of cdac .</h5>
-         <br>
-         <h5>8. So What are you thinking Work hard you will get placed within 1 month of campus just staty with us here !!</h5>
-         <br>
-         </p>
-         <p class="lead">Which Language Can I use ? Whats the format of Questions ? .</p>
-         <p class="mt-4">
-         <h5>1. Any Language Which you want to be use  you can use </h5>
-         <br>
-         <h5>2. Most Important you must able to solve problems thats it .</h5>
-         <br>
-         <h5>3. I will suggest for Dac Focus on cpp and Java and .net </h5>
-         <br>
-         <h5>4. For Big Data Guys Focus on Java , Python .</h5>
-         <br>
-         <h5>5. We will start this program from 20Th Aug 2019 until end of this batch .</h5>
-         <br>
-         <h5>6. We will start from baisc program please dont be oversmart and dont skip Questions. </h5>
-         <br>
-         <h5>7. By just thinking this is very simple questions dont skip anything . </h5>
-         <br>
-         <h5>8. From very basic to very very difficult level we will go this will improve youe coding skills .</h5>
-         <br>
-         <h5>9. Daily New Question will come and after 1 day I will post answer if anyone not able to solve Then see that answer and dont copy paste try to Understand code and start your own implementation .</h5>
-         <br>
-         </p>
-    
-      
-      </div>
-
+   </div>
+</section>
+<section id="bc" class="mt-3">
+   <div class="container">
+      <nav aria-label="breadcrumb">
+         <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+               <a href="{% url 'index' %}">
+               <i class="fas fa-home"></i> Home</a>
+            </li>
+            <li class="breadcrumb-item active">Questions</li>
+         </ol>
+      </nav>
+   </div>
 </section>
 <section id="about" class="py-4">
-      <div class="container">
+   <div class="container">
       <div class="row">
-   {% if listings %}
-   <div style=" background-color: lightgrey; width: 800px;
-   border: 2px solid gray;
-   padding: 50px;
-   margin: 20px; ">
-      {% for list in listings %}
-      <h4>Today's Question : <br> <br>
-        {{list.task}}
-      </h4>
-      <br>
-      <p class="lead">Input Format : <br>
-         {{list.inp|linebreaks}}
-      </p>
-      <p class="lead">OutPut  Format : <br>
-         {{list.out|linebreaks}}
-      </p>
-      <p class="lead">Answer : <br>
-         {{list.ans|linebreaks}}
-      </p>
-      {% endfor %}
-      {% endif %}
-   </div>
-   
-   {% if apti %}
-   <div style=" background-color: lightgrey; width: 800px;
-      border: 2px solid gray;
-      padding: 50px;
-      margin: 20px; ">
-      {% for list in apti %}
-      <h4>Today's Question : <br> <br>
-       {{list.apti_q}}
-      </h4>
-      <br>
-      <p class="lead">Options  : <br>
-         {{list.A}}  <br>
-         {{list.B}} <br>
-         {{list.C}} <br>
-         {{list.D}} <br>
-      </p>
-      <p class="lead">Answer : <br>
-         {{list.ans}}
-      </p>
-      {% endfor %}
-      {% endif %}
-   </div>
-</div>
-   <a  style="margin-left: 30%"  href="{% url 'previous' %}" class="btn btn-secondary text-white btn-lg">Previous Questions</a>
+         <div class="col-md-8">
+            <a href="{% url 'C-CPP-Programming-Questions' %}" class="btn btn-secondary text-white btn-sm" >CDAC Progamming Qustions</a>
+               <br> <br>
+            <h4> Aptitude Questions : <br> <br> </h4>
+            {% if listings %}
      
-   </div>
-</div>
-</section>
-<!-- Work -->
-<section id="work" class="bg-dark text-white text-center">
-   <h3>Enter Email If You are new here So You will get Daily Notification Dont Forget any single Question:</h3>
+      
+            {% for list in listings %}
+           
+            <table class="bix-tbl-container" cellspacing="0" cellpadding="0" border="0" width="100%">
+            <tbody>
+               <tr>
+                  <td class="bix-td-qno" rowspan="2" valign="top" align="left" > {{list.qno}}.&nbsp;&nbsp;&nbsp;</td>
+                  <td class="bix-td-qtxt" valign="top">
+                     <p>{{list.apti_q}}
+                  </td>
+               </tr>
+               <tr>
+                  <td class="bix-td-miscell" valign="top">
+                     <table class="bix-tbl-options" id="tblOption_434" border="0" cellpadding="0" cellspacing="0" width="100%">
+                        <tbody>
+                           <tr>
+                              <td  style="padding-top: .40em;" width="1%" ><a id="lnkOptionLink_A_434" href="javascript: void 0;">A.</a></td> 
+                              <td  style="padding-top: .40em;" width="99%" id="tdOptionDt_A_434">&nbsp;&nbsp;{{list.A}}</td>
+                           </tr>
+                           <tr>
+                              <td  style="padding-top: .2em;" width="1%" id="tdOptionNo_B_434"><a id="lnkOptionLink_B_434" href="javascript: void 0;">B.</a></td>
+                              <td  style=" padding-top: .5em;" width="99%" id="tdOptionDt_B_434">&nbsp;&nbsp;{{list.B}}</td>
+                           </tr>
+                           <tr>
+                              <td  style="padding-top: .40em;" width="1%" id="tdOptionNo_C_434"><a id="lnkOptionLink_C_434" href="javascript: void 0;">C.</a></td>
+                              <td  style=" padding-top: .5em;" width="99%" id="tdOptionDt_C_434">&nbsp;&nbsp;{{list.C}}</td>
+                           </tr>
+                           <tr>
+                              <td  style="padding-top: .40em;" width="1%" id="tdOptionNo_D_434"><a id="lnkOptionLink_D_434" href="javascript: void 0;">D.</a></td>
+                              <td  style=" padding-top: .5em;" width="99%" id="tdOptionDt_D_434">&nbsp;&nbsp;{{list.D}}</td>
+                           </tr> <br>
+                           <tr> 
+                             <td style=" padding-top: .40em;" width="1%"> <br> 
+                              
+      
+                          </tr>
+                       </tbody>
+                     </table>
+                    </td> <br> <br>
+                  </tr>
+                </tbody>
+              </table>
+              <pre style="margin-left: 35px;
+              border: 1px dashed #93b7d5;
+              background-color: #f8f8f8;
+              padding: 10px;
+              width: auto;
+              margin-top: 10px;
+              margin-bottom: 10px;
+             
+              "
+              >
+                  {{list.ans|linebreaks}}
+              </pre>
+            
+               {% endfor %}
+               {% endif %}
+
+              </div>
+      </div>
+   <br> <br>
+      
+
+<a  style="margin-left: 30%"  href="{% url 'previous' %}" class="btn btn-secondary text-white btn-lg">Previous Questions</a>
+ <br> <br>
+ <section id="work" class="bg-dark text-white text-center">
+   <h4>Enter email if you are new here so you will get daily <br>
+       notification Don't forget any single question:</h4>
    <form action="{% url 'notify' %}" method="POST">
       {% csrf_token %}
       E-mail: <input style="color: black" type="email" name="email">
       <input style="color: green" type="submit">
    </form>
 </section>
+
+</section>
+<!-- Work -->
+<
 {% endblock %}
