--- a/ccatcracker/templates/partials/_topbar.html
+++ b/ccatcracker/templates/partials/_topbar.html
@@ -6,7 +6,7 @@
             <i class="fas fa-envelope-open"></i> abhijeets7663@gmail.com
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i> help.ccatcracker@gmail.com
+          <i class="fas fa-envelope-open"></i> help@ccatcracker.in
         </div>
         <div class="col-md-4">
           <div class="social text-right">
