--- a/ccatcracker/templates/partials/top.html
+++ b/ccatcracker/templates/partials/top.html
@@ -37,7 +37,7 @@
  </style>
    
         <div class="top">
-          <a class="w3schools-logo" href="#"><strong>ccatcracker</strong><span style="color: green;"><strong>.in</strong></span></a>
+          <a class="w3schools-logo" href="#"><strong>Notations&</strong><span style="color: green;"><strong>Sargams</strong></span></a>
           <br> <br>
           <p class="description"><span >Bollywood Songs Sargam, Notes. Hindi Songs Harmonium and Piano Tutorials.</span></p>
          
