--- a/ccatcracker/templates/test/main.html
+++ b/ccatcracker/templates/test/main.html
@@ -52,7 +52,7 @@ form.example input[type=text] {
     padding-bottom: 50px;
 }
 </style>
-<section style="background-color: black;">  
+<section style="background-image: url(../static/img/images.jpg);background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">    
 <div id="content-wrap"></div>
 <section id="about" class="py-4">
 	<div class="container">
@@ -65,7 +65,7 @@ form.example input[type=text] {
 			
 				<button type="submit"><i class="fa fa-search"></i></button>
 			  </form>
-			  <p id="search-results"  style="background:black;">
+			  <p id="search-results">
 
 
 				</p>
